FastTree and higher order ops merged in. Non-determinism in guide system (and bounding box calculations) observed.